--- a/C.vcxproj
+++ b/C.vcxproj
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="book.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="str.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="book.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
